--- a/ProyectoFinal/accounts/templates/accounts/navbar.html
+++ b/ProyectoFinal/accounts/templates/accounts/navbar.html
@@ -23,9 +23,16 @@
       <li class="nav-item">
         <a class="nav-link" href="{% url 'products' %}">Products</a>
       </li>
+
       {% else %}
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'products' %}">Products</a>
+      </li>
        <li class="nav-item">
         <a class="nav-link" href="{% url 'account' %}">Settings</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'user-page' %}">Main Page</a>
       </li>
       {% endif %}
     </ul>
