--- a/ProyectoFinal/accounts/templates/accounts/user.html
+++ b/ProyectoFinal/accounts/templates/accounts/user.html
@@ -1,7 +1,14 @@
 {% extends 'accounts/main.html' %}
 {% block content %}
 {% include 'accounts/status.html' %}
-
+<style>
+	.product-pic{
+		max-width: 200px;
+		max-height:200px;
+		margin: 0 auto;
+		border-radius: 50%;
+	}
+</style>
 <div class="row">
 	<div class="col-md">
 		<div class="card card-body">
@@ -21,7 +28,7 @@
 					<td>{{order.product.category}}</td>
 					<td>{{order.date_created}}</td>
 					<td>{{order.status}}</td>
-					<td><img class="product-pic" src="{{order.product_pic.url}}" ></td>
+					<td><img class="product-pic" src="{{order.product.product_pic.url}}" ></td>
 				</tr>
 				{% endfor %}
 
